--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -19,7 +19,8 @@ html{
 	--g2: linear-gradient(220deg,var(--orange),var(--c5));
 	--g3: linear-gradient(220deg, var(--c1), var(--yellow));
 	--g4: linear-gradient(220deg, var(--p1), var(--p3));
-    --g5: linear-gradient(90deg, var(--c5) , var(--orange));
+	--g5: linear-gradient(90deg, var(--c5) , var(--orange));
+	--block-h: 30vh;
 }
 
 
