--- a/app/src/components/Button/button.scss
+++ b/app/src/components/Button/button.scss
@@ -104,6 +104,18 @@ transform: scaleX(1);
   animation: glitch-animation 1s linear 0s infinite;
 }
 
+.btn--link.btn{
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  &:hover{
+    &:before{
+      content: "";
+      display: none;
+      transform: scaleX(0);
+    
+    }
+    letter-spacing:1px;
+  } 
+}
 
 @keyframes moveSide {
 25% {
