--- a/app/src/components/Button/button.scss
+++ b/app/src/components/Button/button.scss
@@ -6,14 +6,15 @@
 	--white-color: #fafafa;
   }
 .btn{
-    display: inline-block;
+  display: inline-block;
 	background:var(--p3);
 	color:#fff;
 	cursor: pointer;
 	position: relative;
 	font-family: Tomorrow, sans-serif;
 	font-size: .85rem;
-	text-transform: uppercase;
+  text-transform: uppercase;
+  text-decoration: none;
 	clip-path: polygon(92% 0, 100% 25%, 100% 100%, 8% 100%, 0% 75%, 0 0);
 	border: 0;
 	outline: none;
@@ -104,7 +105,8 @@ transform: scaleX(1);
   animation: glitch-animation 1s linear 0s infinite;
 }
 
-.btn--link.btn{
+.btn--link{
+  text-decoration: none;
   transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   &:hover{
     &:before{
