--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -383,7 +383,7 @@ about
     color: var(--c4);
   }
 }
-canvas {
+.radarholder canvas {
   max-width: 60%;
   margin-bottom: 8vh;
   margin: 0 auto;
