--- a/src/components/Stack/stack.scss
+++ b/src/components/Stack/stack.scss
@@ -1,21 +1,34 @@
-.stackholder{
+.stackholder {
 	text-align: center;
-	img{
+	img {
 		width: 48px !important;
 		height: 48px !important;
 		margin-bottom: 16px;
 	}
 }
-.stacks{
+.stacks {
 	background: var(--g4);
-	color:#fff;
+	color: #fff;
 	border-radius: 6px;
 	text-align: center;
 	padding: 26px 0;
 	transition: all 200ms ease-in-out;
-	clip-path: polygon(0 0,25% 0,calc(25% + 9px) 9px,calc(75% - 9px) 9px,75% 0,100% 0,100% 100%,60% 100%,calc(60% - 8px) calc(100% - 8px),calc(40% + 8px) calc(100% - 8px),40% 100%,0 100%);
-	box-shadow:
-	0 0px 0px 0px inset var(--c5), 0 0 0px 0px var(--p3) inset,0 -28px 50px var(--c3) inset;
+	clip-path: polygon(
+		0 0,
+		25% 0,
+		calc(25% + 9px) 9px,
+		calc(75% - 9px) 9px,
+		75% 0,
+		100% 0,
+		100% 100%,
+		60% 100%,
+		calc(60% - 8px) calc(100% - 8px),
+		calc(40% + 8px) calc(100% - 8px),
+		40% 100%,
+		0 100%
+	);
+	box-shadow: 0 0px 0px 0px inset var(--c5), 0 0 0px 0px var(--p3) inset,
+		0 -28px 50px var(--c3) inset;
 
 	min-width: 50%;
 	@media only screen and (min-width: 40em) {
@@ -27,6 +40,6 @@
 }
 
 .stacks:hover {
-	box-shadow:
-	0 0px 0px 4px inset var(--c5), 0 0 9px 16px var(--p3) inset,0 -40px 50px var(--c3) inset
+	box-shadow: 0 0px 0px 4px inset var(--c5), 0 0 9px 16px var(--p3) inset,
+		0 -40px 50px var(--c3) inset;
 }
