--- a/src/scss/elements/forms.scss
+++ b/src/scss/elements/forms.scss
@@ -9,106 +9,101 @@ label + textarea {
 	margin-top: 4px;
 }
 
-
 /* Buttons
  ========================================================================== */
- .btn{
+.btn {
 	padding: 16px 24px;
 	display: inline-block;
-	color:#fff;
+	color: #fff;
 	font-weight: bold;
 	line-height: 1.25;
 	transition: $transition;
 	background: var(--g1);
-	&:hover{
-		background: var(--c5)
+	&:hover {
+		background: var(--c5);
 	}
-	&.btn--white{
+	&.btn--white {
 		background: #fff;
 		border: 1px solid var(--c4);
-		color:#000;
-		
-		&:hover{
+		color: #000;
+
+		&:hover {
 			background: darken(#fff, 10%);
 		}
 	}
-	&.btn--tech{
+	&.btn--tech {
 		position: relative;
 		background: transparent;
-		color:#fff;
+		color: #fff;
 		z-index: 0;
-		 border:0 ;
+		border: 0;
 		animation: animateGlow4 1s linear infinite alternate;
 
-		&:hover{
+		&:hover {
 			//background: darken(#fff, 10%);
 		}
 		@extend %tech-b;
 	}
-	&.btn--ghost{
+	&.btn--ghost {
 		background: transparent;
 		position: relative;
 		z-index: 1;
 		//overflow: hidden;
 		margin: 4px;
 		border: 1px solid var(--c4);
-		&:hover{
+		&:hover {
 			background: var(--c4);
 		}
 	}
- }
-.btn--tech-holder{
+}
+.btn--tech-holder {
 	text-align: right;
 	display: block;
 
-		svg{
+	svg {
 		vertical-align: sub;
-		margin-right: 4px
+		margin-right: 4px;
 	}
-
-
 }
 
-.form-col{
+.form-col {
 	display: flex;
-	label{
-		
+	label {
 		width: 50%;
-		
-		&:first-child{
-			padding-right:24px ;
+
+		&:first-child {
+			padding-right: 24px;
 		}
-		input{
+		input {
 			width: 100%;
 		}
 	}
 }
-label{
+label {
 	font-size: 14px;
-	font-weight: bold;;
+	font-weight: bold;
 	margin-bottom: 24px;
-	.req{
+	.req {
 		font-size: 12px;
 		margin-top: 4px;
-		span{
+		span {
 			color: $neg;
 		}
-
 	}
-	span{
-			margin-bottom: 4px;
-			display: inline-block;
-		}
+	span {
+		margin-bottom: 4px;
+		display: inline-block;
+	}
 }
-input{
+input {
 	box-sizing: border-box;
 	width: 100%;
 	background: $light;
 	border: 0;
 	padding: 8px 16px;
 }
-select{
-		background: $light;
+select {
+	background: $light;
 	border: 0;
 	padding: 8px 16px;
 }
