--- a/src/scss/base/mixins.scss
+++ b/src/scss/base/mixins.scss
@@ -1,6 +1,14 @@
-
 %clippath {
-clip-path: polygon( 0px 0px, calc(100% - 0px) 0px, calc(100% - 0px) calc(100% - 16px), calc(60% + 16px) calc(100% - 16px), calc(60% - 0px) calc(100% - 0px), calc(40% + 0px) calc(100% - 0px), calc(40% - 16px) calc(100% - 16px), 0px calc(100% - 16px));
+	clip-path: polygon(
+		0px 0px,
+		calc(100% - 0px) 0px,
+		calc(100% - 0px) calc(100% - 16px),
+		calc(60% + 16px) calc(100% - 16px),
+		calc(60% - 0px) calc(100% - 0px),
+		calc(40% + 0px) calc(100% - 0px),
+		calc(40% - 16px) calc(100% - 16px),
+		0px calc(100% - 16px)
+	);
 }
 
 %clearfix {
@@ -22,21 +30,20 @@ clip-path: polygon( 0px 0px, calc(100% - 0px) 0px, calc(100% - 0px) calc(100% - 
 	z-index: 2;
 }
 %max_w {
-	
 	display: flex;
-	max-width:  $max-width;
+	max-width: $max-width;
 	grid-gap: 24px;
 	justify-content: space-between;
 	flex-wrap: wrap;
 	margin: 0 auto;
-	& > *{
-		flex:1;
+	& > * {
+		flex: 1;
 	}
 	@media only screen and (max-width: $max-width) {
 		padding: 0 $pad_xs;
-		
-		& > *{
-			flex:1 1;
+
+		& > * {
+			flex: 1 1;
 			margin-bottom: 32px;
 			display: block;
 		}
@@ -49,6 +56,11 @@ clip-path: polygon( 0px 0px, calc(100% - 0px) 0px, calc(100% - 0px) calc(100% - 
 }
 %max_w_m {
 	width: $max-width_m;
+	max-width: 100%;
+	margin: 0 auto;
+}
+%max_w_l {
+	width: $max-width_l;
 	max-width: 100%;
 	margin: 0 auto;
 }
@@ -85,7 +97,6 @@ clip-path: polygon( 0px 0px, calc(100% - 0px) 0px, calc(100% - 0px) calc(100% - 
 	}
 }
 
-
 %block-pad {
 	padding: $block_pad_m 0;
 	@include bp-large {
@@ -93,13 +104,11 @@ clip-path: polygon( 0px 0px, calc(100% - 0px) 0px, calc(100% - 0px) calc(100% - 
 	}
 }
 
-
-%bg_cover{
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+%bg_cover {
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
-
 
 %anim-delay {
 	animation-name: fade-in;
@@ -112,73 +121,70 @@ clip-path: polygon( 0px 0px, calc(100% - 0px) 0px, calc(100% - 0px) calc(100% - 
 	}
 }
 
-
-%tech{
+%tech {
 	position: relative;
 	overflow: hidden;
 	border-radius: 3px;
 	&:after {
-    content: '';
-    position: absolute;
-    width: 200%;
-    height: 50%;
-    right: 0px;
-    top: 0px;
-    background: var(--p1);
-    transition: $transition;
-    //transform: skewX(35deg);
-    transform-origin: right bottom;
-    z-index: -1;
-     animation:boxin2 300ms linear forwards;
-
+		content: "";
+		position: absolute;
+		width: 200%;
+		height: 50%;
+		right: 0px;
+		top: 0px;
+		background: var(--p1);
+		transition: $transition;
+		//transform: skewX(35deg);
+		transform-origin: right bottom;
+		z-index: -1;
+		animation: boxin2 300ms linear forwards;
 	}
 	&:before {
-	    content: '';
-	    position: absolute;
-	    width: 200%;
-	    height: 0%;
-	    right: 0px;
-	    bottom: 0px;
-	    background: var(--p1);
-	    transform: skewX(-35deg);
-	    transform-origin: right top;
-	    z-index: -1;
-	    animation:boxin 300ms linear forwards;
-	    transition: $transition;
+		content: "";
+		position: absolute;
+		width: 200%;
+		height: 0%;
+		right: 0px;
+		bottom: 0px;
+		background: var(--p1);
+		transform: skewX(-35deg);
+		transform-origin: right top;
+		z-index: -1;
+		animation: boxin 300ms linear forwards;
+		transition: $transition;
 	}
 }
-%tech-b{
+%tech-b {
 	position: relative;
 	overflow: hidden;
 	//border-radius: 3px;
 	&:after {
-    content: '';
-    position: absolute;
-    width: 200%;
-    height: 50%;
-    right: 0px;
-    top: 0px;
-    background: var(--c4);
-    transition: $transition;
-    //transform: skewX(35deg);
-    transform-origin: right bottom;
-    z-index: -1;
-     animation:boxin2 300ms linear forwards;
-
+		content: "";
+		position: absolute;
+		width: 200%;
+		height: 50%;
+		right: 0px;
+		top: 0px;
+		background: var(--c4);
+		transition: $transition;
+		//transform: skewX(35deg);
+		transform-origin: right bottom;
+		z-index: -1;
+		animation: boxin2 300ms linear forwards;
 	}
 	&:before {
-	    content: '';
-	    position: absolute;
-	    width: 200%;
-	    height: 0%;
-	    right: 0px;
-	    bottom: 0px;
-	    background: var(--c4);
-	    transform: skewX(-35deg);
-	    transform-origin: right top;
-	    z-index: -1;
-	    animation:boxin 300ms linear forwards;
-	    transition: $transition;
+		content: "";
+		position: absolute;
+		width: 200%;
+		height: 0%;
+		right: 0px;
+		bottom: 0px;
+		background: var(--c4);
+		transform: skewX(-35deg);
+		transform-origin: right top;
+		z-index: -1;
+		animation: boxin 300ms linear forwards;
+		transition: $transition;
 	}
 }
 @keyframes fade-in {
@@ -190,49 +196,58 @@ clip-path: polygon( 0px 0px, calc(100% - 0px) 0px, calc(100% - 0px) calc(100% - 
 	}
 }
 @keyframes animateGlow {
-  0% {
-    background-position: 0% 50%; }
-  100% {
-    background-position: 200% 50%; } 
+	0% {
+		background-position: 0% 50%;
+	}
+	100% {
+		background-position: 200% 50%;
+	}
 }
 @keyframes animateGlow2 {
-  0% {
-    box-shadow: 0 0 20px rgba(0,0,0,0.2),0px -60px 50px -60px $c2,0px 60px 30px -60px $c2; }
-  100% {
-     box-shadow:  0px 17px 7px -9px #362f3466,0px -60px 10px -60px $c2,0px 60px 10px -60px$c3; } 
+	0% {
+		box-shadow: 0 0 20px rgba(0, 0, 0, 0.2), 0px -60px 50px -60px $c2,
+			0px 60px 30px -60px $c2;
+	}
+	100% {
+		box-shadow: 0px 17px 7px -9px #362f3466, 0px -60px 10px -60px $c2,
+			0px 60px 10px -60px$c3;
+	}
 }
 @keyframes animateGlow3 {
-  0% {
-    box-shadow: 0px -30px 30px -30px $c2,0px 30px 30px -30px $c2; }
-  100% {
-     box-shadow:  0px -30px 10px -30px $c2,0px 30px 10px -30px$c3; } 
+	0% {
+		box-shadow: 0px -30px 30px -30px $c2, 0px 30px 30px -30px $c2;
+	}
+	100% {
+		box-shadow: 0px -30px 10px -30px $c2, 0px 30px 10px -30px$c3;
+	}
 }
 
 @keyframes animateGlow4 {
-  0% {
-    box-shadow: -15px 0 13px -18px $c2,-15px 0 13px -18px $c2;  }
-  100% {
-     box-shadow:  -15px 0 13px -18px $c3,-15px 0 13px -18px $c3; } 
+	0% {
+		box-shadow: -15px 0 13px -18px $c2, -15px 0 13px -18px $c2;
+	}
+	100% {
+		box-shadow: -15px 0 13px -18px $c3, -15px 0 13px -18px $c3;
+	}
 }
 
 @keyframes animateGlow4-2 {
-  0% {
-    box-shadow: -15px 0 13px -18px $c4,-15px 0 13px -18px $c4; }
-  100% {
-     box-shadow:  -15px 0 13px -18px $c5,-15px 0 13px -18px $c5,;} 
+	0% {
+		box-shadow: -15px 0 13px -18px $c4, -15px 0 13px -18px $c4;
+	}
+	100% {
+		box-shadow: -15px 0 13px -18px $c5, -15px 0 13px -18px $c5;
+	}
 }
 
 @keyframes float {
 	0% {
-	
 		transform: translatey(0px);
 	}
 	50% {
-	
 		transform: translatey(-20px);
 	}
 	100% {
-		
 		transform: translatey(0px);
 	}
 }
