--- a/src/scss/elements/page-header.scss
+++ b/src/scss/elements/page-header.scss
@@ -3,189 +3,179 @@
 	z-index: 1;
 	position: relative;
 	text-align: right;
-	a{
+	a {
 		overflow: hidden;
 	}
-
 }
 
 .share-holder {
-
-    position: absolute;
-    top: 0;
-    right: 0;
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
-    background: var(--p1);
-    border-radius: 5px 5px 0 0;
-    height: 0;
-    overflow: hidden;
-    width: 255px;
-    text-align: center;
-   transition:$transition;
-   &.open{
-	height: 60px;
-	box-shadow: 0px -20px 20px -25px rgba(0,0,0,0.4);
-   }
-
+	position: absolute;
+	top: 0;
+	right: 0;
+	-webkit-transform: translateY(-100%);
+	transform: translateY(-100%);
+	background: var(--p1);
+	border-radius: 5px 5px 0 0;
+	height: 0;
+	overflow: hidden;
+	width: 255px;
+	text-align: center;
+	transition: $transition;
+	&.open {
+		height: 60px;
+		box-shadow: 0px -20px 20px -25px rgba(0, 0, 0, 0.4);
+	}
 }
-.pageheader{
-	.title{
+.pageheader {
+	.title {
 		padding: 20vh 0 0;
 	}
-	.media{
+	.media {
 		@extend %bg_cover;
 	}
 }
-.layout--single{
-
-	.pageheader{
+.layout--single {
+	.pageheader {
 		position: relative;
 		z-index: 12;
 	}
-	&.media{
+	&.media {
 		@extend %bg_cover;
 		background-attachment: fixed;
 		overflow: hidden;
 	}
 	.image-t img {
-		
 		max-width: 100%;
 		width: 100%;
 		box-shadow: 0px 40px 30px -30px #000;
-		@include bp-medium{
+		@include bp-medium {
 			position: absolute;
 			bottom: 0;
 			max-width: 420px;
 		}
 	}
-	.image-t{
-		.block-revealer__element{
+	.image-t {
+		.block-revealer__element {
 			height: 154%;
 			top: -54%;
 			bottom: 0;
 		}
 	}
-	
 }
 
-.fullpage-portfolio{
-    //height: 50vh;
-    @extend %bg_cover;
-    padding-top: 25vh;
-    width: 100%;
-    overflow: hidden;
-    padding-bottom: 64px;  
-    background-attachment: fixed;
-    img{
-	display: block;
+.fullpage-portfolio {
+	//height: 50vh;
+	@extend %bg_cover;
+	padding-top: 25vh;
+	width: 100%;
+	overflow: hidden;
+	padding-bottom: 64px;
+	background-attachment: fixed;
+	img {
+		display: block;
 	}
-	h2{
+	h2 {
 		padding: 2px 16px;
 	}
 }
 
-$image_w :420px;
-.top-one{
+$image_w: 420px;
+.top-one {
 	position: relative;
-	.btn--tech-holder{
+	.btn--tech-holder {
 		text-align: left;
 		padding: 8px 0;
 	}
 	.image-o {
-
 		z-index: 1;
-		@include bp-medium{
-				position: absolute;
-				right: 0;
-				width:$image_w;
-				bottom: 0;
+		@include bp-medium {
+			position: absolute;
+			right: 0;
+			width: $image_w;
+			bottom: 0;
 		}
 	}
-	h1,h2{
+	h1,
+	h2 {
 		position: relative;
-		z-index: 2;margin: 0;
+		z-index: 2;
+		margin: 0;
 		display: inline-block;
 	}
-	h2{
+	h2 {
 		@extend %tech;
 	}
-
 }
-.top-two{
+.top-two {
 	position: relative;
 	z-index: 1;
-	@include bp-medium{
+	@include bp-medium {
 		display: flex;
 	}
-	
-	.block-revealer__content{
+
+	.block-revealer__content {
 		width: 100%;
-		@include bp-medium{
+		@include bp-medium {
 			display: flex;
 		}
 	}
-	.content{
+	.content {
 		margin: 24px 0 64px;
 		box-sizing: border-box;
-		
-		@include bp-medium{
+
+		@include bp-medium {
 			padding-right: 46px;
 		}
-		& > div{
-				@include bp-medium{
-					top: 50%;
-					transform: translateY(-50%);
-					margin: 0 auto;
-					position: relative;
+		& > div {
+			@include bp-medium {
+				top: 50%;
+				transform: translateY(-50%);
+				margin: 0 auto;
+				position: relative;
 			}
 		}
 	}
-	.image-t{
+	.image-t {
 		//position: absolute;
 		right: 0;
 		width: 100%;
 		max-width: 100%;
 		top: 0;
 		z-index: 1;
-		@include bp-medium{
+		@include bp-medium {
 			width: $image_w;
 			min-width: $image_w;
 		}
-
 	}
 }
-.top-three{
+.top-three {
 	position: relative;
 	z-index: 1;
 	text-align: center;
 	background: var(--g5);
 	padding: 32px 32px;
-	.flex-it{
+	.flex-it {
 		display: flex;
 		flex-wrap: wrap;
-		& > div{
+		& > div {
 			width: 50%;
-			@include bp-medium{
+			@include bp-medium {
 				width: 25%;
 			}
-			&.client, &.date{
-					
-					margin-top: 32px;
-					
-				@include bp-medium{
+			&.client,
+			&.date {
+				margin-top: 32px;
+
+				@include bp-medium {
 					margin-top: 0;
 					padding-bottom: 0;
 				}
-				
 			}
 		}
 	}
-	
-	
-	.tags{
 
-		a{
+	.tags {
+		a {
 			font-size: 14px;
 			background: var(--c5);
 			color: #fff;
@@ -196,28 +186,27 @@ $image_w :420px;
 		}
 	}
 }
-.top-four{
+.top-four {
 	background: #2e3443cc;
 	padding: 32px;
-
 }
-.rest-content{
+.rest-content {
 	margin-top: 5vh;
-	img{
-	display: block;
-	margin-bottom: 5vh;
+	img {
+		display: block;
+		margin-bottom: 5vh;
 	}
 }
-.videopad{
+.videopad {
 	position: relative;
-    /*Intrinsic ratio value below*/
-   padding-bottom: 56.25%;
-    height: 0;
-    iframe{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    }
+	/*Intrinsic ratio value below*/
+	padding-bottom: 56.25%;
+	height: 0;
+	iframe {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+	}
 }
