--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -21,6 +21,13 @@
 		width: 500px;
 	}
 }
+.logo {
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 0px;
+	width: 90px;
+	margin-bottom: 32px;
+}
 .hero + section {
 	margin-top: 0;
 }
