--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -115,6 +115,22 @@ ol {
 .pagination {
 	margin-top: 32px;
 	font-size: 32px;
+	span {
+		font-size: 24px;
+	}
+	a {
+		padding: 32px;
+		&:hover {
+			color: var(--lighblue);
+			background: linear-gradient(90deg, var(--p1), var(--p3));
+		}
+	}
+	.next {
+		&:hover {
+			background: var(--g4);
+		}
+		text-align: right;
+	}
 }
 .portfolio-page {
 	section {
@@ -252,6 +268,10 @@ ol {
 	//mix-blend-mode: multiply;
 	mix-blend-mode: exclusion;
 }
+.portfolioBlockBody {
+	margin-bottom: 16px;
+	align-items: flex-start;
+}
 
 .decor {
 	&.decor--box {
@@ -359,7 +379,7 @@ about
 }
 .radarholder canvas {
 	max-width: 80%;
-	width: 500px!important;
+	width: 500px !important;
 	padding: 8px;
 	margin-bottom: 8vh;
 	margin: 0 auto;
@@ -373,7 +393,7 @@ about
 		margin-bottom: 16px;
 	}
 }
-.iframeGallery{
+.iframeGallery {
 	width: 100%;
 	height: 100%;
 	min-height: 760px;
