--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -271,6 +271,22 @@ ol {
 .portfolioBlockBody {
 	margin-bottom: 16px;
 	align-items: flex-start;
+	display: flex;
+	max-width: 1400px;
+	grid-gap: 24px;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin: 0 auto;
+	& > * {
+		flex: 1;
+	}
+	.box {
+		margin-bottom: 24px;
+		min-width: 100%;
+	}
+}
+.gallery-wrapper {
+	min-width: 75%;
 }
 
 .decor {
@@ -397,4 +413,14 @@ about
 	width: 100%;
 	height: 100%;
 	min-height: 760px;
+}
+
+#imgContainer {
+	clip-path: polygon(
+		0px 0px,
+		100% 0px,
+		100% calc(100% - 16px),
+		calc(100% - 16px) 100%,
+		0px 100%
+	);
 }
