--- a/src/scss/base/variables.scss
+++ b/src/scss/base/variables.scss
@@ -21,7 +21,8 @@ html {
 	--c5: #c5003c;
 	--green: #41bf50;
 	--green2: #8bcc3b;
-	--yellow: #fef900;
+	--yellow2: #fef900;
+	--yellow: #ffe009;
 	--orange: #f59740;
 	--lighblue: #69f8ff;
 	--blue: #0040b0;
