--- a/src/components/Award/style.scss
+++ b/src/components/Award/style.scss
@@ -40,11 +40,73 @@
 	background: var(--yellow);
 	color: #000;
 	padding: 48px 24px;
-	.content{
+	.content {
 		margin-bottom: 16px;
 		min-height: 100px;
 	}
 }
 .award-img {
 	margin: 0 auto;
+}
+.awards-container {
+	position: relative;
+}
+.awards-container:before {
+	content: "";
+	z-index: -1;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	transition: all 300ms ease-in-out;
+	background: linear-gradient(-45deg, var(--yellow) 0%, var(--blue) 100%);
+	filter: blur(20px);
+	opacity: 0;
+}
+
+.awards-container:hover:before {
+	background: linear-gradient(-45deg, #ffe32c 0%, #52acff 100%);
+	transform: translate3d(0px, 20px, 0) scale(0.95);
+
+	opacity: 1;
+	transition: opacity 0.3s;
+	border-radius: inherit;
+}
+
+/* 
+* Prevents issues when the parent creates a 
+* stacking context. (For example, using the transform
+* property )
+*/
+.awards-container::after {
+	content: "";
+	z-index: -1;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: inherit;
+	border-radius: inherit;
+}
+
+.box:before {
+}
+
+/* 
+* Prevents issues when the parent creates a 
+* stacking context. (For example, using the transform
+* property )
+*/
+.box::after {
+	content: "";
+	z-index: -1;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: inherit;
+	border-radius: inherit;
 }
